@@ -1,5 +1,10 @@
 2007-02-21  Abel Cheung  <abelcheung@gmail.com>
 
+	* wp-scorerender.php:
+	Really filters content/comment through guido_filter().
+
+2007-02-21  Abel Cheung  <abelcheung@gmail.com>
+
 	* wp-scorerender.php: Allows update of database structure.
 
 2007-02-20  Abel Cheung  <abelcheung@gmail.com>
